syntax = "proto3";

package v1;

import "gw_get_user.proto";
import "gw_create_user.proto";
import "gw_update_user.proto";
import "gw_delete_user.proto";

option go_package = "github.com/Dejan91/inventory-management/proto/gateway/user/api/v1";

service User {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}
