syntax = "proto3";

package pb;

option go_package = "github.com/Dejan91/inventory-management/user/pb";

message GetUserRequest {
  string auth_uid = 1;
  string uid = 2;
}

message GetUserResponse {
  string uid = 1;
  string external_uid = 2;
  string username = 3;
  string email = 4;
}
